# C-Like-Compiler

./: .clang-tidy  .gitmodules  CMakeLists.txt  READEME.md  README.md  运行说明.md
config/: grammar.cache  grammar.cache.time  grammar.txt  grammar_zh 1.txt  grammar_zh.txt  table.cache  translator.py
config/input/: input.txt  input2.txt
grammar/: grammar.cache  grammar.cache.time  grammar.txt  translator.py
include/src/Compiler/: Compiler.hpp
include/src/Function/: Function.hpp  FunctionTable.hpp
include/src/LR1Parser/: LR1Parser.hpp  Symbol.hpp
include/src/Lexer/: Lexer.hpp  Token.hpp  TokenType.hpp
include/src/MipsInstructionGenerator/: CodeList.hpp  MipsInstructionGenerator.hpp  RegisterManager.hpp  StackManager.hpp
include/src/Quater/: Quater.hpp  QuaterList.hpp
include/src/Semantic/: SemanticAnalyzer.hpp
include/src/Variable/: Variable.hpp  VariableTable.hpp  VariableType.hpp
include/src/common/: MetaData.hpp
input/: input.c  input_6个形参.txt  input_demo.txt  input_for.txt  input_if.txt  input_while.txt  input_变量表嵌套.txt  input_复杂表达式.txt  input_布尔表达式.txt  input_斐波那契.txt  input_累加.txt  input_阶乘.txt  intput_倒数.txt
src/: Compiler.cpp  Compiler.hpp  main.cpp
src/Compiler/: Compiler.cpp
src/LR1Parser/: LR1Parser.cpp  LR1Parser.hpp  Symbol.hpp
src/Lexer/: Lexer.cpp  Token.hpp
src/MipsInstructionGenerator/: MipsInstruction.hpp  MipsInstructionGenerator.cpp  MipsInstructionGenerator.hpp  RegisterManager.cpp  StackManager.cpp  TempRegManager.hpp  Variable.cpp
src/Semantic/: Quater.hpp  QuaterList.hpp  SemanticAnalyzer.cpp  SemanticAnalyzer.hpp  VariableTable.cpp  VariableTable.hpp
src/common/: MetaData.cpp  MetaData.hpp
tests/: test_RegisterManager.cpp  test_main.cpp
